haproxy_workflow/projects/rh_demo/script/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-pod-service
  namespace: webservice-demo
spec:
  selector:
    app: my-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
