haproxy_workflow/projects/rh_demo/script/yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: my-pod-route
  namespace: webservice-demo
  labels: {}
spec:
  to:
    kind: Service
    name: my-pod-service
  tls: null
  port:
    targetPort: 8080
